--- a/nedzink.html
+++ b/nedzink.html
@@ -252,7 +252,7 @@
         <div data-aos="fade-up" data-aos-duration="1000">
       
             <video class="manufacturer-video" id="nedzink-video" poster="/images/finishes/nedzink/nz-neo.jpg" controls>
-              <source src="videos/nedzink.mp4" type="video/mp4">
+              <source src="videos/nedzink.mp4#t=0.001" type="video/mp4">
             </video>
      
         <div id="pill-1-text">
