--- a/nedzink.html
+++ b/nedzink.html
@@ -950,7 +950,7 @@ NedZink NUANCE is mainly used for aesthetically high quality building applicatio
 <!-- Contact Form -->
 <section id="nedzink-contact-form" class="white-theme contact-form">
   <div class="section-padding">
-    <div style="overflow-x:hidden, overflow-y: hidden;" class="container">
+    <div style="overflow-x:hidden, overflow-y:hidden;" class="container">
       
       <h2 data-aos="fade-down" data-aos-duration="1000">Get a Free Quote, Brochures & Samples!</h2>
       <form data-aos="fade-up" data-aos-duration="1000" id="nedzink-form" method="post" action="https://formspree.io/f/myylwzqn" enctype="multipart/form-data">
@@ -1054,7 +1054,7 @@ Brochure 1</label>
     <div>
 <div class="flex">
     <label style="margin-right: 5px;" for="nedzink-address-1">
-      <input type="tel" id="nedzink-address-1" class="form-control address" name="address-1" placeholder="Address Line 1">
+      <input type="text" id="nedzink-address-1" class="form-control address" name="address-1" placeholder="Address Line 1">
     </label>
     <label style="margin-left: 5px;" for="nedzink-address-2">
       <input type="text" id="nedzink-address-2" class="form-control address" name="address-2" placeholder="Address Line 2">
