--- a/nedzink.html
+++ b/nedzink.html
@@ -953,12 +953,12 @@ NedZink NUANCE is mainly used for aesthetically high quality building applicatio
         <div class="col-md-6">
             
        <div class="flex">
-            <label style="margin-right: 5px;" for="nedzink-first-name">
+            <label style="margin-right: 5px;width: calc(50% - 5px);" for="nedzink-first-name">
               <input type="text" id="nedzink-first-name" class="form-control" name="first-name" placeholder="First Name" required>
             
             </label>
 
-            <label style="margin-left: 5px;" for="nedzink-surname">
+            <label style="margin-left: 5px;width: calc(50% - 5px);" for="nedzink-surname">
               <input type="text" id="nedzink-surname" class="form-control" name="surname" placeholder="Surname" required>
             </label>
     </div>
